--- a/campaign.links.menu.yml
+++ b/campaign.links.menu.yml
@@ -1,17 +1,24 @@
+# Campaign menu items under /admin/structure definition
+campaign.structure:
+  title: 'Campaigns'
+  description: 'Administer Campaign and Campaign types.'
+  route_name: campaign.structure
+  parent: system.admin_structure
 
-# Campaign menu items definition
+
+# Campaign menu items under /admin/structure/campaigns definition
 entity.campaign.collection:
   title: 'Campaign list'
   route_name: entity.campaign.collection
   description: 'List Campaign entities'
-  parent: system.admin_structure
+  parent: campaign.structure
   weight: 100
 
 
-# Campaign type menu items definition
+# Campaign type menu items under /admin/structure/campaigns definition
 entity.campaign_type.collection:
   title: 'Campaign type'
   route_name: entity.campaign_type.collection
   description: 'List Campaign type (bundles)'
-  parent: system.admin_structure
+  parent: campaign.structure
   weight: 99
