--- a/campaign.links.action.yml
+++ b/campaign.links.action.yml
@@ -3,8 +3,8 @@ entity.campaign.add_form:
   title: 'Add Campaign'
   appears_on:
     - entity.campaign.collection
-entity.campaign_type.add_form:
-  route_name: entity.campaign_type.add_form
-  title: 'Add Campaign type'
-  appears_on:
-    - entity.campaign_type.collection
+# entity.campaign_type.add_form:
+#   route_name: entity.campaign_type.add_form
+#   title: 'Add Campaign type'
+#   appears_on:
+#     - entity.campaign_type.collection
