Campaign task menu added under /admin/content

--- a/campaign.links.task.yml
+++ b/campaign.links.task.yml
@@ -1,3 +1,9 @@
+entity.campaign.collection:
+  title: Campaigns
+  description: List of Campaigns.
+  route_name: entity.campaign.collection
+  base_route: system.admin_content
+
 # Campaign routing definition
 
 entity.campaign.canonical:
